# 42c-report-scan-to-postman

./: README.md  setup.cfg
.github/workflows/: create-releases.yml
c42_csr2postman/: __main__.py  exceptions.py
c42_csr2postman/models/: __init__.py  csr.py  csr_v1.py  interfaces.py  postman.py
examples/: PhotoManager-ScanIssues-NoPrio.json  PhotoManager-ScanIssues-WithPrio.json  PhotoManager-conformance-scan-2021-12-23-13-15.json
examples/platform_v1/: Claps API.postman_collection.json  PhotoManager-conformance-scan-2021-10-27-21-11.json  PhotoManager-conformance-scan-v2.json  csr_response.json
examples/platform_v2/: PhotoManager-ScanReportNew.json
