[metadata]
name = 42c_csr2postman
description = 42Crunch Conformance Scan Report to Postman converter
version = file: VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = License :: OSI Approved :: Apache Software License
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: Console
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
author = 42 Crunch
maintainer = Daniel Garcia (cr0hn)
maintainer_email = cr0hn@cr0hn.com
url = https://github.com/42c-presales/42c-report-scan-to-postman

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    42c-csr = c42_csr2postman.__main__:main
